Make configuration reader compatible with all OS's.